--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,6 @@
 .container {
   height: 100%;
   background-color: antiquewhite;
+
+  --simple-drop-shadow: drop-shadow(0 2px 5px rgba(0, 0, 0, 40%));
 }
